--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.1
   shrine_images: ^2.0.1
+  google_fonts: ^2.1.0
 
 dev_dependencies:
+  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
